--- a/templates/author/list.html.twig
+++ b/templates/author/list.html.twig
@@ -12,11 +12,11 @@
 {% endif %}
 {% set nbBooks = 0 %}
 {% for author in authors %}
-{% set nbBooks = nbBooks + author.nb_books %}
+{% set nbBooks = nbBooks + author.nbBooks %}
 <img src="{{asset(author.picture)}}" alt="{{author.username}}" height="150px">
 <p><b>Username : </b> {{ author.username | upper }} </p>
 <p><b>Email : </b> {{ author.email }} </p>
-<p><b>Number of Books : </b> {{ author.nb_books }} </p>
+<p><b>Number of Books : </b> {{ author.nbBooks }} </p>
 <a href="{{path('app_author_details',{ id : author.id })}}">Details</a>
 <hr>
 {% else %}
